Added some things for better code smell